--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mysql2": "^3.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.2",
     "pg-promise": "^11.5.4"
   },
   "devDependencies": {
